corrected bootrstrap display issue on safari

--- a/src/assets/scss/boldgrid/_elements.scss
+++ b/src/assets/scss/boldgrid/_elements.scss
@@ -17,6 +17,11 @@ body.custom-background {
 	backface-visibility: hidden;
 }
 
+.row:before,
+.row:after {
+	display: inline-block;
+	}
+
 .site-content {
 	display: flex;
 	flex-direction: column;
